Add Rewards processing (views not yet implemented)

--- a/views/rivenDetails.pug
+++ b/views/rivenDetails.pug
@@ -5,6 +5,7 @@ block scripts
 block content
     h1 Riven
     p id = #{riven._id}
+    p type = #{riven.type.name}
     p weaponName = #{riven.weaponName}
     p Challenge :
     ul
