--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -1,19 +1,22 @@
 extends layout
 
 block content
-    table(border=0)
-        thead
-            tr
-                th ID
-                th Date
-                th Type
-        tbody
-            each val in rewards
+    if rewards.length === 0
+        h2 Empty list
+    else
+        table(border=0)
+            thead
                 tr
-                    td(style='padding:5px')
-                        a(href='/reward/view/'+val._id)= val._id
-                    if (val.date)
-                        td(style='padding:5px')= date2string(val.date)
-                    else
-                        td
-                    td(style='padding:5px')= val.type.name
+                    th ID
+                    th Date
+                    th Type
+            tbody
+                each val in rewards
+                    tr
+                        td(style='padding:5px')
+                            a(href='/reward/view/'+val._id)= val._id
+                        if (val.date)
+                            td(style='padding:5px')= date2string(val.date)
+                        else
+                            td
+                        td(style='padding:5px')= val.type.name
