Add to Reward Form (create & update) and Riven Form a variable number corresponding to mandatory condition. Slight modification of the reward form script. Modified Riven and Reward Schemas.

--- a/views/rewardDetails.pug
+++ b/views/rewardDetails.pug
@@ -36,6 +36,8 @@ block content
             = 'Riven challenge is : '
             for val in reward.riven.conditions
                 input(value=val.description size=val.description.length readonly)
+                if val === reward.riven.conditions[0] && reward.riven.N
+                    = '(N='+reward.riven.N+')'
             br
             = 'Advices for this challenge : '
             br
