--- a/views/rewardForm.pug
+++ b/views/rewardForm.pug
@@ -41,6 +41,9 @@ block content
                 option(value= val._id) #{val.description}
         span(id='mand-span-example' onClick='addOptional(this)' style='margin-left: 20px;') [+]
         br
+        label(for='rivenConditionVariable') Mandatory condition variable 'N' :
+        input(type='number' min='0' id='rivenConditionVariable' name='rivenN')
+        br
         br
         div(id='condition-rows-example')
     // Beginning of visible template
