--- a/views/rivenForm.pug
+++ b/views/rivenForm.pug
@@ -19,21 +19,24 @@ block content
     // Riven creation form
     form(method='POST' action='/riven/formAdd' onsubmit='return validateForm(this);')
         label(for='riven-type') Type :
-        select(name = 'riven.type' id = 'riven-type')
+        select(name = 'type' id = 'riven-type')
             each val in types
                 option(value= val._id) #{val.name}
         br
         br
         label(for='weaponName') Weapon Name :
-        input(name='riven.weaponName' id='weaponName')
+        input(name='weaponName' id='weaponName')
         br
         br
         label(for='mcondition') Mandatory Condition :
-        select(name = 'riven.conditions[]' id='mcondition')
+        select(name = 'conditions[]' id='mcondition')
             option none
             each val in conditions.mandatories
                 option(value= val._id) #{val.description}
         span(id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;') [+]
+        br
+        label(for='conditionVariable') Mandatory condition variable 'N' :
+        input(type='number' min='0' id='conditionVariable' name='N')
         br
         br
         div(id='condition-rows')
