--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,11 +31,18 @@ a {
   left: 0;
   right: 0;
   top:0;
-  height:60px;
+  padding: 20px;
   background: #e9e9ff;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
-.left-right-container {
+.marginTop {
+  margin-top: 20px;
+}
+
+.marginTop .left-right-container {
   position: fixed;
   padding: 0;
   margin: 0;
@@ -48,6 +55,20 @@ a {
 
 .right-element {
   display: inline-block;
-  float: left;
+  float: right;
   margin-left: 20px;
 }
+
+.grid-container {
+  display: grid;
+  grid-gap: 5px;
+  padding: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+@media screen and (max-width: 768px) {
+  td {
+    font-size: 125%;
+  }
+}
+
