--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,21 +6,22 @@ html
       link(rel='stylesheet', href='/stylesheets/style.css')
     block scripts
       - const version = 1.0
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
   body
     block body
-      div(class='header')
-        header
-          p
+      header
+        div(class='header')
+          div
             a(href='/types') Riven Types
-            = ' - '
+          div
             a(href='/conditions') Riven Conditions
-            = ' - '
+          div
             a(href='/boosters') Booster Types
-            = ' - '
+          div
             a(href='/rivenForm') Create Riven
-            = ' - '
+          div
             a(href='/rewardForm') Create Reward
-            = ' - '
+          div
             a(href='/rewardForm/list') List Rewards
       section
         block content
