--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -13,51 +13,62 @@ block content
     if rewards.length === 0
         h2 Empty list
     else
-        h1 Rewards from #{offset + 1} to #{offset + rewards.length} over #{totalCount} rewards.
+        h1(style='margin-top:20px;') Rewards from #{offset + 1} to #{offset + rewards.length} over #{totalCount} rewards.
         br
         form(action='/rewardForm/list' id="formOptions" method='post')
-            div
-                if (offset > 0)
-                    button(onclick="return first();" type='submit' style='margin-right:5px') first
-                    button(onclick="return previous();" type='submit' style='margin-right:15px') <==
-                else
-                    button(style='margin-right:5px' disabled) first
-                    button(style='margin-right:15px' disabled) <==
-                input(type='text' id='nb' name='nb' size='12' value=nb onchange='onChangeNb();')
-                input(type='hidden' id='offset' name='offset' value=offset)
-                if (hasNext === true)
-                    button(onclick="return next();" type='submit' style='margin-left:15px') ==>
-                else
-                    button(style='margin-left:15px' disabled) ==>
-                if (offset + nb < totalCount)
-                    button(style='margin-left:5px' onclick="return last("+totalCount+");") last
-                else
-                    button(style='margin-left:5px' disabled) last
-                label(for='dateLow' style='margin-left:40px') Date higher than :
-                button(onclick="return resetDate(this.nextElementSibling);" type='button') X
-                input(type='text' name='dateLow' id='dateLow' size='12' value=dateLow readonly)
-                input(type='hidden' readonly)
-                button(onclick="return toggleDatepicker1(this.previousElementSibling);" type='button') Pick Date
-                //button(onclick="return toggleDatepicker(this.previousElementSibling);" type='button') Pick Date
-                label(for='dateHigh' style='margin-left:40px') Date lower than :
-                button(onclick="return resetDate(this.nextElementSibling);" type='button') X
-                input(type='text' name='dateHigh' id='dateHigh' size='12' value=dateHigh readonly)
-                input(type='hidden' readonly)
-                button(onclick="return toggleDatepicker2(this.previousElementSibling);" type='button') Pick Date
-        br
-        table(border=0)
-            thead
-                tr
-                    th ID
-                    th Date
-                    th Type
-            tbody
-                each val in rewards
+            div(class='grid-container')
+                div
+                    if (offset > 0)
+                        button(style='margin-left:5px' onclick="return first();" type='submit') first
+                        button(style='margin-left:5px' onclick="return previous();" type='submit') <==
+                    else
+                        button(style='margin-left:5px' disabled) first
+                        button(style='margin-left:5px' disabled) <==
+                    input(type='text' id='nb' name='nb' size='6' value=nb onchange='onChangeNb();' style='text-align: center; margin-left: 5px;')
+                    input(type='hidden' id='offset' name='offset' value=offset)
+                    if (hasNext === true)
+                        button(style='margin-left:5px' onclick="return next();" type='submit') ==>
+                    else
+                        button(style='margin-left:5px' disabled) ==>
+                    if (offset + nb < totalCount)
+                        button(style='margin-left:5px' onclick="return last("+totalCount+");") last
+                    else
+                        button(style='margin-left:5px' disabled) last
+                div
+                    label(for='dateLow' style='margin-right:5px;') Date >=
+                    button(onclick="return resetDate(this.nextElementSibling);" type='button') X
+                    input(type='text' name='dateLow' id='dateLow' size='12' value=dateLow readonly)
+                    input(type='hidden' readonly)
+                    button(onclick="return toggleDatepicker1(this.previousElementSibling);" type='button') Pick Date
+                div
+                    label(for='dateHigh' style='margin-right:5px;') Date <=
+                    button(onclick="return resetDate(this.nextElementSibling);" type='button') X
+                    input(type='text' name='dateHigh' id='dateHigh' size='12' value=dateHigh readonly)
+                    input(type='hidden' readonly)
+                    button(onclick="return toggleDatepicker2(this.previousElementSibling);" type='button') Pick Date
+                div
+                    label(for='perType') Filter by type :
+                    select(name='type' id='perType' onchange='onSelect(this)')
+                        option -
+                        each type in rewardTypes
+                            if (rewardTypeSelected.toString() === type._id.toString())
+                                option(value= type._id selected) #{type.name}
+                            else
+                                option(value= type._id) #{type.name}
+        div(class='marginTop')
+            table(border=0)
+                thead
                     tr
-                        td(style='padding:5px')
-                            a(href='/reward/view/'+val._id)= val._id
-                        if (val.date)
-                            td(style='padding:5px')= date2string(val.date)
-                        else
-                            td
-                        td(style='padding:5px')= val.type.name
+                        th ID
+                        th Date
+                        th Type
+                tbody
+                    each val in rewards
+                        tr
+                            td(style='padding:5px')
+                                a(href='/reward/view/'+val._id)= val._id
+                            if (val.date)
+                                td(style='padding:5px')= date2string(val.date)
+                            else
+                                td
+                            td(style='padding:5px')= val.type.name
