New : riven statistics (processing and views)

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,8 @@ html
             a(href='/rewardForm') Create Reward
           div
             a(href='/rewardForm/list') List Rewards
+          div
+            a(href='/stats') Stats
       section
         block content
       div(class='footer')
