--- a/views/rewardDetails.pug
+++ b/views/rewardDetails.pug
@@ -8,16 +8,26 @@ block content
     input(id='id' size='24' value=reward._id)
     br
     br
-    if reward.date
-        - var formattedDate = date2string(reward.date)
-        label(for='date') Obtained at this date :
-        input(id='date' size='24' value=formattedDate readonly)
+    if reward.createdBy
+        label(for='createdBy') Created by :
+        input(id='createdBy' size='32' value=reward.createdBy.email readonly)
+        br
+        br
+    if reward.modifiedBy
+        label(for='modifiedBy') Modified by :
+        input(id='modifiedBy' size='32' value=reward.modifiedBy.email readonly)
         br
         br
     label(for='created') Created in database at this date :
     input(id='created' size='24' value=reward.Created_date readonly)
     br
     br
+    if reward.date
+        - var formattedDate = date2string(reward.date)
+        label(for='date') Obtained at this date :
+        input(id='date' size='24' value=formattedDate readonly)
+        br
+        br
     if reward.booster
         label(for='booster') Booster type is :
         input(id='booster' size='24' value=reward.booster.name readonly)
