Small corrections. Reward update form debug.

--- a/views/rewardUpdate.pug
+++ b/views/rewardUpdate.pug
@@ -116,7 +116,7 @@ block content
                         span(id='mand-span' onClick='addOptional(this)' style='margin-left: 20px;') [+]
                     br
                     label(for='rivenConditionVariable') Mandatory condition variable 'N' :
-                    input(type='number' min='0' id='rivenConditionVariable' name='rivenN')
+                    input(type='number' min='0' id='rivenConditionVariable' name='rivenN' value= reward.riven.N)
                     br
                     br
                     div(id='condition-rows')
