Add a view : list of rivens (that are not sortie's rewards). Add a created_date and additional information field to riven model. Change the riven form and detailed view accordingly.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,8 @@ html
           div
             a(href='/rivenForm') Create Riven
           div
+            a(href='/rivenForm/list') List Rivens
+          div
             a(href='/rewardForm') Create Reward
           div
             a(href='/rewardForm/list') List Rewards
