--- a/views/rivenForm.pug
+++ b/views/rivenForm.pug
@@ -28,6 +28,10 @@ block content
         input(name='weaponName' id='weaponName')
         br
         br
+        label(for='note') Additional information :
+        input(name='note' id='note' size='40')
+        br
+        br
         label(for='mcondition') Mandatory Condition :
         select(name = 'conditions[]' id='mcondition')
             option none
