--- a/views/rivenForm.pug
+++ b/views/rivenForm.pug
@@ -17,7 +17,7 @@ block content
         br
     h1 Create a new Riven
     // Riven creation form
-    form(method='POST' action='/riven/formAdd' onsubmit='return validateForm(this);')
+    form(method='POST' action='/riven/form' onsubmit='return validateForm(this);')
         label(for='riven-type') Type :
         select(name = 'type' id = 'riven-type')
             each val in types
