update dependencies for security purpose + minor updates -> align the auth mecanism due to the update of 'password' dependency. modification of the lists (rivens and rewards) to provide additional informations

--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -62,6 +62,7 @@ block content
                         th ID
                         th Date
                         th Type
+                        th Additional information
                 tbody
                     each val in rewards
                         tr
@@ -72,3 +73,7 @@ block content
                             else
                                 td
                             td(style='padding:5px')= val.type.name
+                            if (val.booster)
+                                td(style='padding:5px')= boosterTypes[val.booster]
+                            if (val.riven)
+                                td(style='padding:5px')= val.riven.weaponName
