Adding world events from warframestat.us

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,8 @@ html
           div
             a(href='/stats') Stats
           div
+            a(href='/worldState/events') WorldEvents
+          div
             if (connected === true)
               a(href='/users/disconnect') Disconnect
             else
