--- a/views/logged.pug
+++ b/views/logged.pug
@@ -1,6 +1,6 @@
 extends layout
 
-block scripts
+block append scripts
     script.
         window.onload = function() {
             setTimeout(function() {window.location.href = '/';}, 4000);
