--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,3 +72,19 @@ a {
   }
 }
 
+ul.striped-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  max-width: 200px;
+}
+ul.striped-list > li {
+  border-bottom: 1px solid rgb(221,221,221);
+  padding: 6px;
+}
+ul.striped-list > li:nth-of-type(odd) {
+  background-color: #e9e9f9 ;
+}
+ul.striped-list > li:last-child {
+  border-bottom: none;
+}
