--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,43 +1,47 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
     block link
-      link(rel='stylesheet', href='/stylesheets/style.css')
+      link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css', integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3', crossorigin='anonymous')
     block scripts
-      - const version = 1.0
+      - const version = 1.1
+      script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p', crossorigin='anonymous')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    meta(charset='utf-8')
   body
     block body
       header
-        div(class='header')
-          div
-            a(href='/types') Riven Types
-          div
-            a(href='/conditions') Riven Conditions
-          div
-            a(href='/boosters') Booster Types
-          div
-            a(href='/rivenForm') Create Riven
-          div
-            a(href='/rivenForm/list') List Rivens
-          div
-            a(href='/rewardForm') Create Reward
-          div
-            a(href='/rewardForm/list') List Rewards
-          div
-            a(href='/stats') Stats
-          div
-            a(href='/worldState/events') WorldEvents
-          div
-            if (connected === true)
-              a(href='/users/disconnect') Disconnect
-            else
-              a(href='/users/loginForm') Login
+        nav(class='navbar navbar-expand-lg navbar-light')
+          div(class='container-fluid')
+            ul(class='nav nav-pills nav-fill', style='background: #e9e9ff')
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/types', id='nav-rivtyp') Riven Types
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/conditions', id='nav-rivcond') Riven Conditions
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/boosters', id='nav-boosttyp') Booster Types
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/rivenForm', id='nav-rivform') Create Riven
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/rivenForm/list', id='nav-rivlist') List Rivens
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/rewardForm', id='nav-rewform') Create Reward
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/rewardForm/list', id='nav-rewlist') List Rewards
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/stats', id='nav-stats') Stats
+              li(class='nav-item')
+                a(class='nav-link', aria-current='page', href='/worldState/events', id='nav-events') WorldEvents
+              li(class='nav-item')
+                if (connected === true)
+                  a(class='nav-link', aria-current='page', href='/users/disconnect') Disconnect
+                else
+                  a(class='nav-link', aria-current='page', href='/users/loginForm', id='nav-login') Login
       section
         block content
-      div(class='footer')
-        footer
-          p
+      footer(class='page-footer fixed-bottom', style='background-color: #e9e9f9;')
+        div(class='container-fluid', style='width: 100%;')
+          p(class='text-end')
             i croopyrite jojo
 
