--- a/views/rewardUpdate.pug
+++ b/views/rewardUpdate.pug
@@ -1,10 +1,9 @@
 extends layout
 
-block link
-    link(rel='stylesheet', href='/stylesheets/style.css')
+block append link
     link(rel='stylesheet', href='/dp/dp.css')
 
-block scripts
+block append scripts
     script.
         var reward = !{JSON.stringify(reward)};
     script(src='/dp/dp.js')
@@ -12,6 +11,10 @@ block scripts
     script(src='/javascripts/updateScripts.js')
 
 block content
+    script.
+        var navitem = document.getElementById('nav-rewform');
+        navitem.classList.add('active');
+
     // invisible Divs, ready for cloning
     div(id='boosters' hidden=true)
         label(for='booster-select') Select a booster type :
