--- a/views/rivenList.pug
+++ b/views/rivenList.pug
@@ -1,38 +1,41 @@
 extends layout
 
-block link
-    link(rel='stylesheet', href='/stylesheets/style.css')
-
 block content
-    if rivens.length === 0
-        h2 Empty list
-    else
-        h1(style='margin-top:20px;') List of Rivens
-        p
-            ="Those are rivens obtained by transmutation or special events but not as sortie's rewards."
-            br
-            = "See "
-            a(href='/rewardForm/list') List Rewards
-            = " for that last kind of rivens."
-        br
-        div(class='marginTop')
-            table(border=0)
-                thead
-                    tr
-                        th ID
-                        //th Date
-                        th Type
-                        th Additional information
-                        th Weapon Name
-                    tbody
-                        each val in rivens
-                            tr
-                                td(style='padding:5px')
-                                    a(href='/riven/view/' + val._id)= '...' + val._id.toString().substr(-5, 5)
-                                //if (val.date)
-                                //    td(style='padding:5px')= date2string(val.Created_date)
-                                //else
-                                //    td
-                                td(style='padding:5px')= val.type.name
-                                td(style='padding:5px')= val.note
-                                td(style='padding:5px')= val.weaponName
+	script.
+		document.getElementById('nav-rivlist').classList.add('active');
+
+	div(class='container-fluid')
+		div(class='row ms-1')
+			if rivens.length === 0
+				h2 Empty list
+			else
+				h2 List of Rivens
+				p
+					="Those are rivens obtained by transmutation or special events but not as sortie's rewards."
+					br
+					= "See "
+					a(href='/rewardForm/list') List Rewards
+					= " for that last kind of rivens."
+		if rivens.length > 0
+			div(class='row ms-1')
+				table(class='table table-responsive table-striped table-hover')
+					thead
+						tr
+							th Details
+							//th Date
+							th Type
+							th Additional information
+							th Weapon Name
+					tbody(style='height: 10px !important; overflow-y: auto;')
+						each val in rivens
+							tr
+								td(class='filterable-cell', style='padding:5px')
+									a(class='btn btn-outline-info',href='/riven/view/' + val._id)= 'more info'
+									//a(href='/riven/view/' + val._id)= 'More info on ...' + val._id.toString().substr(-5, 5)
+								//if (val.date)
+								//    td(style='padding:5px')= date2string(val.Created_date)
+								//else
+								//    td
+								td(class='filterable-cell', style='padding:5px')= val.type.name
+								td(class='filterable-cell', style='padding:5px')= val.note
+								td(class='filterable-cell', style='padding:5px')= val.weaponName
